comenzando test delta

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=CBA
 APP_ENV=local
 APP_KEY=base64:kfLiZiBIoK1ZE9o9GFgOHjpBs4vpwxZyi3IIuYsM2J4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=114fa700d5d052
+MAIL_PASSWORD=d1929c03049670
 MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
