--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=114fa700d5d052
-MAIL_PASSWORD=d1929c03049670
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=cba.laravel.2020@gmail.com
+MAIL_PASSWORD=correolaravel
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
