--- a/database/.gitignore
+++ b/database/.gitignore
@@ -1,2 +1,14 @@
 # *.sqlite
 # *.sqlite-journal
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
